--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-autoprefixer": "^7.0.1",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
     "node-sass": "^4.14.1",
     "sass": "^1.32.11"
   },
